// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatus renders error status 1`] = `
<div>
  <div
    class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-medium woocommerce-account-status__header e1q7k77g1 css-2ewdaq-Flex-HeaderUI eboqfv50"
      direction="row"
    >
      Account details
    </div>
    <div
      class="components-card__body is-size-medium css-xmjzce-BodyUI e1q7k77g3"
    >
      Error determining the connection status.
    </div>
  </div>
</div>
`;

exports[`AccountStatus renders normal status 1`] = `
<div>
  <div
    class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-medium woocommerce-account-status__header e1q7k77g1 css-2ewdaq-Flex-HeaderUI eboqfv50"
      direction="row"
    >
      <div
        class="components-flex__item account-details css-1s295sp-Item eboqfv51"
      >
        Account details
      </div>
      <div
        class="components-flex__block account-status css-yr442k-Item-Block eboqfv52"
      >
        <span
          class="chip chip-primary is-compact"
        >
          Complete
        </span>
      </div>
      <div
        class="components-flex__item edit-details css-1s295sp-Item eboqfv51"
      >
        <button
          class="components-button is-link"
          type="button"
        >
          Edit details
        </button>
      </div>
    </div>
    <div
      class="components-card__body is-size-medium css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="components-flex woocommerce-account-status-item css-1cw5ysz-Flex eboqfv50"
        direction="row"
      >
        <div
          class="components-flex__item item-label css-1s295sp-Item eboqfv51"
        >
          Payments:
        </div>
        <div
          class="components-flex__block item-value css-yr442k-Item-Block eboqfv52"
        >
          <span
            class="account-status__info__green"
          >
            <svg
              class="gridicon gridicons-checkmark-circle"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658C17.823 3.39 15.075 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-1.528-.353-2.97-.966-4.266L11 17.768z"
                />
              </g>
            </svg>
            Enabled
          </span>
        </div>
      </div>
      <div
        class="components-flex woocommerce-account-status-item css-1cw5ysz-Flex eboqfv50"
        direction="row"
      >
        <div
          class="components-flex__item item-label css-1s295sp-Item eboqfv51"
        >
          Deposits:
        </div>
        <div
          class="components-flex__block item-value css-yr442k-Item-Block eboqfv52"
        >
          <span
            class="account-status__info__green"
          >
            <svg
              class="gridicon gridicons-checkmark-circle"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658C17.823 3.39 15.075 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-1.528-.353-2.97-.966-4.266L11 17.768z"
                />
              </g>
            </svg>
            Weekly
          </span>
        </div>
      </div>
      <div
        class="components-flex woocommerce-account-status-item css-1k5rnjg-Flex eboqfv50"
        direction="row"
      >
        <div
          class="components-flex__item item-label css-1s295sp-Item eboqfv51"
        >
          Base fee:
        </div>
        <div
          class="components-flex__block item-value css-yr442k-Item-Block eboqfv52"
        >
          Euro 
          (EUR) 
          2.9% + €0,00 per transaction
          <p>
            <a
              href="https://woocommerce.com/document/payments/faq/fees/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusChip renders complete status 1`] = `
<div>
  <span
    class="chip chip-primary is-compact"
  >
    Complete
  </span>
</div>
`;

exports[`StatusChip renders rejected status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Rejected
  </span>
</div>
`;

exports[`StatusChip renders restricted soon status 1`] = `
<div>
  <span
    class="chip chip-warning is-compact"
  >
    Restricted soon
  </span>
</div>
`;

exports[`StatusChip renders restricted status 1`] = `
<div>
  <span
    class="chip chip-alert is-compact"
  >
    Restricted
  </span>
</div>
`;

exports[`StatusChip renders unknown status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Unknown
  </span>
</div>
`;
